Add background config

--- a/index.html
+++ b/index.html
@@ -59,6 +59,19 @@
       Color Tone
       <input type="color" id="inputColor" value="#FFE0E0">
     </label>
+
+    <div class="background-control">
+      <div class="background-header">
+        <label>Background</label>
+        <i class="fas fa-angle-down"></i>
+      </div>
+      <div class="background-content">
+        <div class="dark">#261426</div>
+        <div class="light">#F2F2F2</div>
+        <div class="aux1">#676273</div>
+        <div class="aux2">#DEF2C9</div> 
+      </div>
+    </div>
      
     <div class="controls">
       <div class="pause">
