--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flow Flied</title>
+  
   <script src="p5.js"></script>
-  <!-- <script src="../addons/p5.sound.js"></script> -->
+  <script src="p5.sound.js"></script> 
   <script src="view.js" defer></script>
   <script src="sketch.js" defer></script>
   <script src="https://kit.fontawesome.com/b8200729a2.js" crossorigin="anonymous"></script>
