--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class="menu" id="menu">
     <div class="header">
-      <h1>Flow Flied</h1>
+      <h1>Flow Field</h1>
 
       <div class="flecha">
         <!--<i class="fas fa-angle-double-down"></i>-->
