--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Flow Flied</title>
+  <title>Flow Field</title>
   
   <script src="p5.js"></script>
   <script src="view.js" defer></script>
