--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <input type="range" id="Density" value="0">
     </label>
 
-    <label for="noiseDetail">
+    <label for="NoiseDetail">
       Noise Detail
-      <input type="range" id="noiseDetail" value="0">
+      <input type="range" id="NoiseDetail" value="0">
     </label>
 
     <label for="angleMode" class="angleMode">
